<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="add_">ADD</string>
    <string name="adding">Adding</string>
    <string name="albums">Albums</string>
    <string name="all_company">ALL COMPANY</string>
    <string name="any_member_can_add_or_approve_members">Any member can add or approve members.</string>
    <string name="any_member_can_add_members_but_an_admin_must_approve_them">Any member can add members, but an admin must approve them.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="app_name">Enterprise</string>
    <string name="apply">Apply</string>
    <string name="be_the_first_uploader_please_click_button_below">Be the first uploader, please click button below</string>
    <string name="can_not_be_empty">Can not be empty</string>
    <string name="cancel">Cancel</string>
    <string name="card_management">Card management</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="completed">Completed</string>
    <string name="completed_">COMPLETED</string>
    <string name="config">CONFIG</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="content_delete">Delete</string>
    <string name="country">Country</string>
    <string name="create">Create</string>
    <string name="delete">Delete?</string>
    <string name="delete_company">DELETE COMPANY</string>
    <string name="delete_group">DELETE GROUP</string>
    <string name="deselect_all_">DESELECT ALL</string>
    <string name="description_">DESCRIPTION</string>
    <string name="details">DETAILS</string>
    <string name="dialog_content_file_not_upload_yet">Not already uploaded yet.</string>
    <string name="dialog_content_failed_server_connection">Failed to connect to the server.</string>
    <string name="dialog_content_login">Please login first before continue.</string>
    <string name="dialog_content_login_expired">Session was expired,\nPlease login again!</string>
    <string name="dialog_content_login_success">Login Successfully!</string>
    <string name="dialog_content_logout">Are you sure to logout?</string>
    <string name="dialog_content_wrong_username_password">The username or password is incorrect!</string>
    <string name="done">Done</string>
    <string name="dont_save_content">Are you sure don\'t want to save any change?</string>
    <string name="dont_save_title">Don\'t save</string>
    <string name="download">Download</string>
    <string name="download_">DOWNLOAD</string>
    <string name="download_selected_">DOWNLOAD SELECTED</string>
    <string name="edit">Edit</string>
    <string name="edit_">edit</string>
    <string name="email_address">Email address</string>
    <string name="entertainment">Entertainment</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="group_management">Group management</string>
    <string name="home">Home</string>
    <string name="log_in">Log in</string>
    <string name="log_in_with_email_address">Log in with <b>Email Address</b></string>
    <string name="log_in_with_facebook">Log in with <b>Facebook</b></string>
    <string name="log_in_with_google_plus">Log in with <b>Google Plus</b></string>
    <string name="log_out">LOG OUT</string>
    <string name="member"> Member</string>
    <string name="member_approval"> Member approval</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="no">No</string>
    <string name="no_contents">No contents</string>
    <string name="notifications">Notifications</string>
    <string name="ok">Ok</string>
    <string name="ok_">OK</string>
    <string name="password">Password</string>
    <string name="photo">Photo</string>
    <string name="photo_and_vdo">Photo&amp;VDO</string>
    <string name="photos">Photos</string>
    <string name="pressed_back_twice_to_exit">Press back twice to exit</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_">REFRESH</string>
    <string name="register">Register</string>
    <string name="register_now_"><u>REGISTER NOW</u></string>
    <string name="register_with_email">Register with <b>Email</b></string>
    <string name="register_with_facebook">Register with <b>Facebook</b></string>
    <string name="register_with_google_plus">Register with <b>Google+</b></string>
    <string name="retake">Retake</string>
    <string name="save">Save</string>
    <string name="select_all_">SELECT ALL</string>
    <string name="selected">selected</string>
    <string name="send">Send</string>
    <string name="send_">SEND</string>
    <string name="setting">Setting</string>
    <string name="settings_">SETTINGS</string>
    <string name="share">Share</string>
    <string name="share_">SHARE</string>
    <string name="success">success</string>
    <string name="successfully">successfully</string>
    <string name="take_new_">TAKE NEW</string>
    <string name="toast_chose_wrong_file">You chose wrong file, please choose another.</string>
    <string name="toast_email_is_existed">Email already existed!</string>
    <string name="toast_email_is_invalid">Email is invalid!</string>
    <string name="toast_email_is_null_or_invalid">Email is null or invalid</string>
    <string name="toast_failed_to_connected_server">Failed to connected server!</string>
    <string name="toast_fill_in_the_blank">Please fill in the blank!</string>
    <string name="toast_request_time_out">Request time out. Please try again later.</string>
    <string name="toast_your_password_is_case_sensitive">Your password is case sensitive and
    must consist of at least 8 characters with a mix of letters &amp; numbers</string>
    <string name="toast_your_password_must_be_an_identical_match">
        Your password must be an identical match!</string>
    <string name="toast_please_input_your_first_name_and_last_name">
        Please input your first and last name</string>
    <string name="upload">Upload</string>
    <string name="uploaded_">UPLOADED</string>
    <string name="uploaded__">UPLOAD</string>
    <string name="uploading">Uploading</string>
    <string name="uploading_">UPLOADING</string>
    <string name="use_photo">Use Photo</string>
    <string name="use_video">Use VDO</string>
    <string name="user_management">User management</string>
    <string name="video">Video</string>
    <string name="videos">Videos</string>
    <string name="yes">Yes</string>

</resources>
